crates/parser/src/tests/snapshots/kcl_parser__tests__error_recovery__fn_ty_annotation_recovery_13.snap
---
source: crates/parser/src/tests/error_recovery.rs
expression: "$crate :: tests :: parsing_module_string(r#\"a:({i:i\"#)"
---
Module {
    filename: "",
    doc: None,
    body: [
        Node {
            node: Assign(
                AssignStmt {
                    targets: [
                        Node {
                            node: Target {
                                name: Node {
                                    node: "a",
                                    filename: "",
                                    line: 1,
                                    column: 0,
                                    end_line: 1,
                                    end_column: 1,
                                },
                                paths: [],
                                pkgpath: "",
                            },
                            filename: "",
                            line: 1,
                            column: 0,
                            end_line: 1,
                            end_column: 1,
                        },
                    ],
                    value: Node {
                        node: Missing(
                            MissingExpr,
                        ),
                        filename: "",
                        line: 1,
                        column: 7,
                        end_line: 1,
                        end_column: 7,
                    },
                    ty: Some(
                        Node {
                            node: Function(
                                FunctionType {
                                    params_ty: Some(
                                        [
                                            Node {
                                                node: Dict(
                                                    DictType {
                                                        key_type: Some(
                                                            Node {
                                                                node: Named(
                                                                    Identifier {
                                                                        names: [
                                                                            Node {
                                                                                node: "i",
                                                                                filename: "",
                                                                                line: 1,
                                                                                column: 4,
                                                                                end_line: 1,
                                                                                end_column: 5,
                                                                            },
                                                                        ],
                                                                        pkgpath: "",
                                                                        ctx: Load,
                                                                    },
                                                                ),
                                                                filename: "",
                                                                line: 1,
                                                                column: 4,
                                                                end_line: 1,
                                                                end_column: 5,
                                                            },
                                                        ),
                                                        value_type: Some(
                                                            Node {
                                                                node: Named(
                                                                    Identifier {
                                                                        names: [
                                                                            Node {
                                                                                node: "i",
                                                                                filename: "",
                                                                                line: 1,
                                                                                column: 6,
                                                                                end_line: 1,
                                                                                end_column: 7,
                                                                            },
                                                                        ],
                                                                        pkgpath: "",
                                                                        ctx: Load,
                                                                    },
                                                                ),
                                                                filename: "",
                                                                line: 1,
                                                                column: 6,
                                                                end_line: 1,
                                                                end_column: 7,
                                                            },
                                                        ),
                                                    },
                                                ),
                                                filename: "",
                                                line: 1,
                                                column: 3,
                                                end_line: 1,
                                                end_column: 7,
                                            },
                                        ],
                                    ),
                                    ret_ty: None,
                                },
                            ),
                            filename: "",
                            line: 1,
                            column: 2,
                            end_line: 1,
                            end_column: 7,
                        },
                    ),
                },
            ),
            filename: "",
            line: 1,
            column: 0,
            end_line: 1,
            end_column: 1,
        },
    ],
    comments: [],
}
